# defi-wallet-core-rs

./: .changelog.md  .flake8  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  android_build.sh  checkmac.sh  clean.sh  ios_build.sh  js_build.sh
.cargo/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-build.yml  audit.yml  bindings.yml  build.yml  ci.yml  codeql.yml  docs.yml  ios-build.yml  lint.yml  linux-build.yml  mac-build.yml  test.yml  testci.yml  win-build.yml
bindings/cpp/: Cargo.toml  README.md  build.rs  cbindgen.toml  compile.sh
bindings/cpp/AndroidSecureStorage/: compile.md
bindings/cpp/AndroidSecureStorage/app/src/main/java/com/cronos/play/: SecureStorage.kt
bindings/cpp/include/: android.h  nft.h  user.h
bindings/cpp/src/: android.cc  contract.rs  cronos.cc  cronos.rs  ethereum.rs  funclib.rs  lib.rs  main.cc  main.rs  nft.cc  nft.rs  uint.rs  user.cc
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: cosmos_sdk.rs  ethereum.rs  lib.rs  nft.rs  utils.rs
bindings/wasm/src/cosmos_sdk/: parser.rs  signer.rs
bindings/wasm/src/ethereum/: eip712.rs  signer.rs
bindings/wasm/tests/: account.rs  bank.rs  cosmos_tx.rs  distribution.rs  ethereum.rs  ibc.rs  nft.rs  staking.rs  test_helper.rs  web.rs
common/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
common/src/: common.udl  contract.rs  ibc.rs  lib.rs  login.rs  macros.rs  nft.rs  node.rs  qr_code.rs  transaction.rs  utils.rs  wallet.rs
common/src/contract/: erc4907-abi.json  erc721-abi.json
common/src/crypto/: errors.rs  mod.rs
common/src/node/: cosmos_sdk.rs  error.rs  ethereum.rs  nft.rs  wasm_binding.rs
common/src/node/cosmos_sdk/: balance_query.rs
common/src/node/ethereum/: abi.rs  contract.rs  eip712.rs  erc1155.rs  erc20.rs  erc4907.rs  erc721.rs  ethereum.rs  provider.rs  utils.rs
common/src/node/ethereum/eip712/: deserializer.rs
common/src/transaction/: cosmos_sdk.rs  ethereum.rs  ibc.rs  luna_classic.rs  nft.rs  uniffi_binding.rs  wasm_binding.rs
common/src/transaction/cosmos_sdk/: parser.rs  signer.rs
common/src/transaction/cosmos_sdk/parser/: base_parser.rs  crypto_org_parser.rs  luna_classic_parser.rs  structs.rs  terra_parser.rs  uniffi_binding.rs
common/src/transaction/cosmos_sdk/parser/structs/: cosmos_raw_msg.rs
common/src/transaction/ethereum/: abi_contract.rs  error.rs  signer.rs
common/src/transaction/luna_classic/: wasm.rs
common/src/transaction/terra_core/: wasm.rs
common/src/wallet/: wasm_binding.rs
contracts/: .gitignore  package-lock.json  package.json
contracts/contracts/: GameERC721.sol  TestERC1155.sol  TestERC20.sol  TestERC721.sol
defi-wallet-core-proto/: Cargo.toml
defi-wallet-core-proto/src/: lib.rs
defi-wallet-core-proto/src/prost/: chainmain.chainmain.v1.rs  chainmain.nft.v1.rs  cosmos.bank.v1beta1.rs  cosmos.gov.v1beta1.rs  cosmos.staking.v1beta1.rs  cosmos.tx.v1beta1.rs  cosmos.upgrade.v1beta1.rs  cosmos.vesting.v1beta1.rs
docs/cpp/: Doxyfile  README.md  SUMMARY.md.tmpl  config.json  shell.nix
docs/cpp/mdbook/: book.toml
docs/cpp/sphinx/: conf.py  index.rst
example/android_example/: Makefile  README.md  gradlew.bat  init.sh  settings.gradle
example/android_example/app/: .gitignore  build.gradle
example/cpp-example/: CMakeLists.txt  Makefile  chainmain.cc  chainmain.h  cronos.cc  cronos.h  helper.py  main.cc  wallet.cc  wallet.h
example/cpp-example/sdk/: CMakeLists.txt
example/extension-example/: .gitignore  Makefile  background.js  manifest.json  package-lock.json  package.json  test.html  test.js
example/extension-example/doc/: ContractApprovalDetails.html  ContractTransferDetails.html  CosmosSDKTxInfoRaw.html  GrpcWebClient.html  IntoUnderlyingByteSource.html  IntoUnderlyingSink.html  IntoUnderlyingSource.html  PipeOptions.html  PrivateKey.html  QueuingStrategy.html  ReadableStreamGetReaderOptions.html  Wallet.html  defi_wallet_core_wasm.js.html  global.html  index.html
example/ios-example/: .gitignore  Makefile  README.md  build.sh
example/ios-example/ios-example/: ContentView.swift  common.swift  ios_exampleApp.swift
example/ios-example/ios-example.xcodeproj/: project.pbxproj
example/ios-example/ios-exampleTests/: ios_exampleTests.swift
example/ios-example/ios-exampleUITests/: ios_exampleUITests.swift  ios_exampleUITestsLaunchTests.swift
example/js-example/: index.js  package-lock.json  package.json  webpack.config.js
example/vs-example/: go.bat  go.sh  vs-example.sln
example/vs-example/vs-example/: bindings.h  vs-example.cpp  vs-example.vcxproj
integration_tests/: conftest.py  cronos-ctl.py  network.py  pyproject.toml  shell.nix  test_basic.py  utils.py
mobile_modules/: .gitignore
mobile_modules/android_module/: gradlew  settings.gradle
mobile_modules/android_module/app/: build.gradle
nix/: chainmain.nix  cronos.nix  default.nix  doxybook2.nix  hermes.nix  pypkgs.nix  scripts.nix  sources.json
nix/node/: default.nix  node-packages.json  node-packages.nix  override.nix
proto/: Cargo.toml  README.md
proto-build/: Cargo.toml  NOTICE  README.md
proto-build/src/: main.rs
proto/src/: lib.rs
proto/src/prost/: chainmain.chainmain.v1.rs  chainmain.nft.v1.rs  chainmain.supply.v1.rs  terra.market.v1beta1.rs  terra.oracle.v1beta1.rs  terra.treasury.v1beta1.rs  terra.tx.v1beta1.rs  terra.vesting.v1beta1.rs  terra.wasm.v1beta1.rs
scripts/: .env  chainmain-ctl  chainmain-devnet-alone.yaml  chainmain-devnet.yaml  cpp-tests  cronos-ctl  cronos-devnet.yaml  full-wasm-tests  hermes-ctl  hermes.toml  run-integration-tests  start-all  start-hermes  stop-all  wasm-tests  wasm_tests
wallet-connect/: Cargo.toml  README.md
wallet-connect/examples/: web3.rs
wallet-connect/src/: client.rs  crypto.rs  hex.rs  lib.rs  protocol.rs  serialization.rs  uri.rs
wallet-connect/src/client/: core.rs  options.rs  session.rs  socket.rs
wallet-connect/src/crypto/: aead.rs  key.rs
wallet-connect/src/protocol/: message.rs  rpc.rs  topic.rs
(+48 files in other folders)
