[workspace]
resolver = "2"
members = [
    "proto-build",
    "proto",
    "common",
    "bindings/wasm",
    "bindings/cpp"
]
default-members = [
    "proto-build",
    "proto",
    "common",
]

[profile.release]
opt-level = "s"
debug = true
lto = "thin"
# The following configuration minimizes the size of the output packet, Reference https://github.com/johnthagen/min-sized-rust
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1

[patch.crates-io]
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev="0a031417d8ec9e8696229eb5d172f7155ec3c79c" }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev="0a031417d8ec9e8696229eb5d172f7155ec3c79c" }
siwe= { git = "https://github.com/crypto-com/siwe-rs.git", rev="ead288bc6de086046ce8d15188e167a391079d11"}
