[workspace]
resolver = "2"
members = [
    "proto-build",
    "proto",
    "common",
    "bindings/wasm",
    "bindings/cpp",
]
default-members = [
    "proto-build",
    "proto",
    "common",
]

[profile.release]
opt-level = "s"
debug = true
lto = "thin"
# The following configuration minimizes the size of the output packet, Reference https://github.com/johnthagen/min-sized-rust
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
