[package]
name = "defi-wallet-core-common"
version = "0.2.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# This feature is used to dynamically load ABI contracts. It seems to be
# error-prone and less security for the end user.
abi-contract = []
login = ["siwe"]
uniffi-binding = ["abi-contract", "uniffi", "uniffi_build", "uniffi_macros"]

[dependencies]
anyhow = "1"
bech32 = "0.8"
bip39 = "1"
cosmrs = "0.5"
eyre = "0.6"
# NOTE: add `features = ["legacy"]` if non-EIP-1559 network support is required
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "de275db56a1be948cf4a543e1837f5add6f4750c" }
ibc = { version = "0.13", default-features = false }
ibc-proto = { version = "0.17", default-features = false }
lazy_static = "1"
prost = "0.9"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
secrecy = "0.8"
serde = "1"
serde_json = "1"
serde_with = "1"
siwe = { version = "0.2", optional = true }
tendermint = "0.23"
tendermint-rpc = "0.23"
thiserror = "1"
uniffi = { version = "^0.18", optional = true }
uniffi_macros = { version = "^0.18", optional = true }
url = "2"
# grpc-web-client would be replaced if tonic has native grpc-web support.
# Check https://github.com/hyperium/tonic/issues/645
grpc-web-client = { git = "https://github.com/titanous/grpc-web-client"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
cosmos-sdk-proto = { version = "0.10", default-features = false, features = ["cosmwasm"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto" }
# NOTE: crate `bip39` cannot work with latest crate `rand` (0.8.0)
# FIXME: https://github.com/rust-bitcoin/rust-bip39/issues/14
rand = { version = "0.6", default-features = false, features = ["wasm-bindgen"] }
tonic = { version = "0.7", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosmos-sdk-proto = { version = "0.10", features = ["grpc"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto", features = ["transport"] }
# NOTE: crate `bip39` cannot work with latest crate `rand` (0.8.0)
# FIXME: https://github.com/rust-bitcoin/rust-bip39/issues/14
rand = "0.6"
tokio = { version = "1", features = ["rt"] }
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost", "tls", "tls-roots", "transport"] }

[build-dependencies]
uniffi_build = { version = "^0.18", features=["builtin-bindgen"], optional = true }
