[package]
name = "defi-wallet-core-common"
version = "0.2.1"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# This feature is used to dynamically load ABI contracts. It seems to be
# error-prone and less security for the end user.
abi-contract = ["pest", "pest_derive"]
login = ["siwe"]
uniffi-binding = ["abi-contract", "uniffi", "uniffi_build", "uniffi_macros"]
qr-code = ["abi-contract", "rustc-hex"]
erc4907 = []

[dependencies]
anyhow = "1"
base64 = "0.13"
bech32 = "0.9"
bip39 = "1"
cosmrs = "0.9"
eyre = "0.6"
ethers = { version = "0.17", features = ["rustls", "abigen"] }
ibc = { version = "0.19", default-features = false }
ibc-proto = { version = "0.20", default-features = false }
itertools = "0.10"
lazy_static = "1"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
prost = "0.10"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustc-hex = { version = "2", optional = true }
secrecy = "0.8"
serde = "1"
serde_json = "1"
serde_with = "2"
siwe = { version = "0.4", optional = true }
tendermint = "0.23"
tendermint-proto = "0.23"
tendermint-rpc = "0.23"
thiserror = "1"
uniffi = { version = "^0.19", optional = true }
uniffi_macros = { version = "^0.19", optional = true }
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cosmos-sdk-proto = { version = "0.14", default-features = false, features = ["cosmwasm"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto" }
# NOTE: crate `bip39` cannot work with latest crate `rand` (0.8.0)
# FIXME: https://github.com/rust-bitcoin/rust-bip39/issues/14
rand = { version = "0.7", default-features = false, features = ["wasm-bindgen"] }
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# tonic-web-wasm-client would be replaced if tonic has native grpc-web support.
# Check https://github.com/hyperium/tonic/issues/645
tonic-web-wasm-client = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosmos-sdk-proto = { version = "0.14", features = ["grpc"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto", features = ["transport"] }
# NOTE: crate `bip39` cannot work with latest crate `rand` (0.8.0)
# FIXME: https://github.com/rust-bitcoin/rust-bip39/issues/14
rand = "0.6"
tokio = { version = "1", features = ["rt"] }
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost", "tls", "tls-roots", "transport"] }
once_cell = "1"

[build-dependencies]
uniffi_build = { version = "^0.21", features=["builtin-bindgen"], optional = true }
