[package]
name = "defi-wallet-core-common"
version = "0.3.6"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# This feature is used to dynamically load ABI contracts. It seems to be
# error-prone and less security for the end user.
abi-contract = ["pest", "pest_derive"]
login = ["siwe"]
uniffi-binding = ["abi-contract", "uniffi", "uniffi_build", "uniffi_macros"]
uniffi-bindgen = ["uniffi/cli"]
qr-code = ["abi-contract", "rustc-hex"]
erc4907 = []

[dependencies]
anyhow = "1"
base64 = "0.21"
bech32 = "0.9"
bip39 = { version = "2", default-features = false }
# FIXME: switch to upstream crates.io when released
cosmrs = { git = "https://github.com/crypto-com/cosmos-rust.git" }
eyre = "0.6"
ethers = { version = "=2.0.0", features = ["rustls", "abigen"] }
ethers-addressbook = { version = "=2.0.0"}
ethers-contract = { version = "=2.0.0" }
ethers-core = { version = "=2.0.0" }
ethers-etherscan = { version = "=2.0.0" }
ethers-middleware = { version = "=2.0.0" }
ethers-providers = { version = "=2.0.0"}
ethers-signers = { version = "=2.0.0" }
ethers-solc = { version = "=2.0.0"}

ibc = { version = "0.31", features = ["serde"], default-features = false }
ibc-proto = { version = "0.26", default-features = false }
itertools = "0.10"
lazy_static = "1"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
prost = "0.11"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustc-hex = { version = "2", optional = true }
secrecy = "0.8"
serde = "1"
serde_json = "1"
serde_with = "2"
siwe = { version = "0.5", optional = true }
tendermint = "0.29"
tendermint-proto = "0.30"
tendermint-rpc = "0.29"
thiserror = "1"
uniffi = { version = "^0.23", optional = true }
uniffi_macros = { version = "^0.23", optional = true }
url = "2"
hex="0.4.3"
futures = "0.3"
futures-util = "0.3"
pin-project = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust.git", default-features = false, features = ["cosmwasm", "grpc"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto" }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# tonic-web-wasm-client would be replaced if tonic has native grpc-web support.
# Check https://github.com/hyperium/tonic/issues/645
tonic-web-wasm-client = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust.git", features = ["grpc"] }
defi-wallet-core-proto = { version = "0.1", path = "../proto", features = ["transport"] }
rand = "0.8"
tokio = { version = "1", features = ["rt"] }
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost", "tls", "tls-roots", "transport"] }
once_cell = "1"

[build-dependencies]
uniffi_build = { version = "^0.23", features=["builtin-bindgen"], optional = true }
