[package]
name = "defi-wallet-core-proto"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license = "Apache-2.0"
repository = "https://github.com/https://github.com/crypto-com/defi-wallet-core-rs/tree/main/defi-wallet-core-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto", "crypto.com"]
edition = "2021"
rust-version = "1.56"

[dependencies]
cosmrs = "0.3"
cosmos-sdk-proto = "0.8.0"
prost = "0.9"
prost-types = "0.9"
tendermint-proto = "0.23"

# Optional dependencies
tonic = { version = "0.6", optional = true }

[features]
default = ["grpc"]
grpc = ["tonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
