[package]
name = "proto-build"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
prost = "0.9"
prost-build = "0.9"
regex = "1"
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost", "transport"] }
tonic-build = { version = "0.6", default-features = false, features = ["rustfmt", "prost", "transport"] }
walkdir = "2"
