[package]
name = "proto-build"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.57"

[dependencies]
prost = "0.10"
prost-build = "0.11"
regex = "1"
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost", "transport"] }
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
walkdir = "2"
