[package]
name = "defi-wallet-core-proto"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license = "Apache-2.0"
repository = "https://github.com/crypto-com/defi-wallet-core-rs/tree/main/proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto", "crypto.com"]
edition = "2021"
rust-version = "1.57"

[dependencies]
# FIXME: Set to a release version after upgrading dependency `tendermint` in cosmos-rust (as PR https://github.com/cosmos/cosmos-rust/pull/178).
cosmrs = { git = "https://github.com/crypto-com/cosmos-rust", rev = "163add13d6623ea853b44b0a1596cb4430b4102a" }
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust", rev = "163add13d6623ea853b44b0a1596cb4430b4102a", default-features = false }
prost = "0.9"
prost-types = "0.9"
tendermint-proto = "0.23"
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost"] }
serde = "1"

[features]
default = ["grpc"]
grpc = []
transport = ["tonic/transport", "tonic/tls", "tonic/tls-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
