[package]
name = "defi-wallet-core-proto"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license = "Apache-2.0"
repository = "https://github.com/crypto-com/defi-wallet-core-rs/tree/main/proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto", "defi"]
edition = "2021"
rust-version = "1.57"

[dependencies]
cosmrs = "0.5"
cosmos-sdk-proto = { version = "0.10", default-features = false }
prost = "0.9"
prost-types = "0.10"
tendermint-proto = "0.23"
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost"] }
serde = "1"

[features]
default = ["grpc"]
grpc = []
transport = ["tonic/transport", "tonic/tls", "tonic/tls-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
