[package]
name = "defi-wallet-core-proto"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license = "Apache-2.0"
repository = "https://github.com/crypto-com/defi-wallet-core-rs/tree/main/proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto", "defi"]
edition = "2021"
rust-version = "1.57"

[dependencies]
# FIXME: switch to upstream crates.io when released
cosmrs = { git = "https://github.com/crypto-com/cosmos-rust.git" }
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust.git", default-features = false }
prost = "0.11"
prost-types = "0.11"
tendermint-proto = "0.30"
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"] }
serde = "1"

[features]
default = ["grpc"]
grpc = []
transport = ["tonic/transport", "tonic/tls", "tonic/tls-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
