[package]
name = "defi-wallet-core-cpp"
version = "0.3.0"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"

[dependencies]
defi-wallet-core-common = { path = "../../common" , features=["login","abi-contract"]}
defi-wallet-core-proto = { version = "0.1", path = "../../proto" }
cosmos-sdk-proto = { version = "0.15" }
cxx = "1"
anyhow = "1"
serde="1"
serde_json="1"
siwe = { version = "0.5" }
ethers = { version = "0.17", features = ["rustls"] }
hex = "0.4"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
cxx-build = "1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
