[package]
name = "defi-wallet-core-cpp"
version = "0.3.6"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"

[dependencies]
defi-wallet-core-common = { path = "../../common" , features=["login","abi-contract"]}
defi-wallet-core-proto = { version = "0.1", path = "../../proto" }
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust.git" }
cxx = "1"
anyhow = "1"
serde="1"
serde_json="1"
siwe = { version = "0.5" }
ethers = {  version = "2.0", features = ["rustls"] }
ethers-addressbook = { version = "2.0"}
ethers-contract = { version = "2.0" }
ethers-core = { version = "2.0" }
ethers-etherscan = { version = "2.0" }
ethers-middleware = { version = "2.0" }
ethers-providers = { version = "2.0"}
ethers-signers = { version = "2.0" }
ethers-solc = { version = "2.0"}
hex = "0.4"
tokio = { version = "1", features = ["rt"] }


[target.'cfg(not(target_os="android"))'.dependencies]
keyring="2"




[build-dependencies]
cxx-build = "1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
