[package]
name = "defi-wallet-core-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# This feature is used to restrict test cases of ibc. The ibc cases only be
# tested when running with `--features ibc-test`.
# Since both `--skip` (cargo test) and `#[ignore]` attribute have no effect for
# `wasm-pack test`. So use this feature as an alternative.
ibc-test = []

[dependencies]
defi-wallet-core-common = { path = "../../common" }
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }
tendermint = "0.23"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev="faba6e014da854e296d095541679e852e2288eec" }
wasm-timer = "0.2.5"
tendermint-rpc = "0.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
defi-wallet-core-proto = { version = "0.1", path = "../../proto" }
grpc-web-client = { git = "https://github.com/titanous/grpc-web-client"}
