[package]
name = "defi-wallet-core-wasm"
version = "0.3.6"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# This feature is used to restrict test cases of ibc. The ibc cases only be
# tested when running with `--features ibc-test`.
# Since both `--skip` (cargo test) and `#[ignore]` attribute have no effect for
# `wasm-pack test`. So use this feature as an alternative.
ibc-test = []
cronos-test = []

[dependencies]
defi-wallet-core-common = { path = "../../common", features = ["abi-contract"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
cosmos-sdk-proto = { git = "https://github.com/crypto-com/cosmos-rust.git", default-features = false, features = ["cosmwasm"] }

tendermint = "0.29"

[dev-dependencies]
wasm-bindgen-test = "0.3"
ethers = { version = "=2.0.0", features = ["rustls"] }
ethers-addressbook = { version = "=2.0.0"}
ethers-contract = { version = "=2.0.0" }
ethers-core = { version = "=2.0.0" }
ethers-etherscan = { version = "=2.0.0" }
ethers-middleware = { version = "=2.0.0" }
ethers-providers = { version = "=2.0.0"}
ethers-signers = { version = "=2.0.0" }
ethers-solc = { version = "=2.0.0"}
wasm-timer = "0.2"
tendermint-rpc = "0.29"
defi-wallet-core-proto = { version = "0.1", path = "../../proto" }
tonic-web-wasm-client = "0.3"
